update account settings to profile

--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -62,7 +62,7 @@
 													<p class="text-left"><strong>{{ user.get_full_name }}</strong></p>
 													<p class="text-left small">{{ user.email }}</p>
 													<p class="text-left">
-														<a href="/account_settings" class="btn btn-primary btn-block btn-sm">Your Account</a>
+														<a href="/profile" class="btn btn-primary btn-block btn-sm">Your Profile</a>
 													</p>
 												</div>
 											</div>
