updated welcome page with logo

--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -127,6 +128,8 @@
 			<div class="jumbotron">
 				<div class="container">
 					<h1>cfbets</h1>
+						<img class="img-responsive" alt="cfbets logo" src="{% static 'assets/images/cfbets_logo.png' %}">
+						<br/>
 					<p>Base content goes here. Change it.</p>
 			  	</div>
 			</div>
