update copyright to be dynamic

--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -159,7 +159,7 @@
 
 		<div class="container">
 			<footer>
-				<p>&copy; 2016 cfbets.</p>
+				<p>&copy; {% now "Y" %} cfbets.</p>
 		  	</footer>
 		</div>
 
