--- a/cfbets/bets/templates/bets/base_all_bets.html
+++ b/cfbets/bets/templates/bets/base_all_bets.html
@@ -4,7 +4,73 @@
 
     <div class="container">
         <h1>All Bets</h1>
-	  <p> Hi, {{ user.get_full_name }}. You're logged in. </p>
+		<div class="container">
+			<h3>Active Bets</h3>
+			{% if all_active_bets %}
+				<p>Currently active bets. These don't have a winner marked yet.</p>
+				<table class="table table-striped table-bordered">
+					<thead>
+					  <tr>
+						<th>Proposer</th>
+						<th>Proposee</th>
+						<th>Prop Bet</th>
+						<th>Wager</th>
+					  </tr>
+					</thead>
+					<tbody>
+					{% for bet in all_active_bets %}
+						<tr>
+							<td>{{ bet.accepted_prop.user.get_full_name }}</td>
+							<td>{{ bet.accepted_user.get_full_name }}</td>
+							<td>{{ bet.accepted_prop.prop_text }}</td>
+							<td>${{ bet.accepted_prop.prop_wager }}</td>
+						</tr>
+					{% endfor %}
+					</tbody>
+				</table>
+			{% else %}
+			<p>No active bets?! Probe the group for participation.</p>
+			{% endif %}
+		</div>
+		<div class="container">
+			<h3>Past Accepted Bets</h3>
+			{% if all_accepted_bets %}
+				<p>All past accepted bets. These are accepted bets that have a winner marked (aka closed).</p>
+				<table class="table table-striped table-bordered">
+					<thead>
+					  <tr>
+						<th>Proposer</th>
+						<th>Proposee</th>
+						<th>Prop Bet</th>
+						<th>Wager</th>
+						<th>Winner</th>
+					  </tr>
+					</thead>
+					<tbody>
+					{% for bet in all_accepted_bets %}
+						<tr>
+							<td>{{ bet.accepted_prop.user.get_full_name }}</td>
+							<td>{{ bet.accepted_user.get_full_name }}</td>
+							<td>{{ bet.accepted_prop.prop_text }}</td>
+							<td>${{ bet.accepted_prop.prop_wager }}</td>
+							<!-- cant figure out how to compare enum correctly -->
+							{% if bets.accepted_prop.won_bet|add:"0" == 1 %}
+								<td>{{ bet.accepted_prop.user.get_full_name }}</td>
+							{% elif bets.accepted_prop.won_bet|add:"0" == -1 %}
+								<td>{{ bet.accepted_user.get_full_name }}</td>
+							{% elif not bets.accepted_prop.won_bet %}
+								<td>push</td>
+							{% else %}
+								<td></td>
+							{% endif %}
+						</tr>
+					{% endfor %}
+					</tbody>
+				</table>
+			{% else %}
+			<p>No bets?! We must be just getting started.</p>
+			{% endif %}
+		</div>
     </div>
 
 {% endblock %}
