--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -7,7 +7,8 @@
 
 		<div class="container">
 			<h3>Your Open Bets</h3>
-				<table class="table">
+			{% if your_open_bets %}
+				<table class="table table-striped table-bordered">
 					<thead>
 					  <tr>
 						<th>Prop Bet</th>
@@ -18,7 +19,7 @@
 					  </tr>
 					</thead>
 					<tbody>
-					{% for bet in open_prop_bets %}
+					{% for bet in your_open_bets %}
 						<tr>
 							<td>{{ bet.prop_text }}</td>
 							<td>${{ bet.prop_wager }}</td>
@@ -29,10 +30,36 @@
 					{% endfor %}
 					</tbody>
 				</table>
+			{% else %}
+			<p>You don't have any open bets. Step right up and <a href="#place_bets" data-toggle="modal">place a bet.</a></p>
+			{% endif %}
 		</div>
 		<div class="container">
 			<h3>Your Active Bets</h3>
+			{% if your_active_bets %}
+				<table class="table table-striped table-bordered">
+					<thead>
+					  <tr>
+						<th>Proposer</th>
+						<th>Proposee</th>
+						<th>Prop Bet</th>
+						<th>Wager</th>
+					  </tr>
+					</thead>
+					<tbody>
+					{% for bet in your_active_bets %}
+						<tr>
+							<td>{{ bet.accepted_prop.user.get_full_name }}</td>
+							<td>{{ bet.accepted_user.get_full_name }}</td>
+							<td>{{ bet.accepted_prop.prop_text }}</td>
+							<td>${{ bet.accepted_prop.prop_wager }}</td>
+						</tr>
+					{% endfor %}
+					</tbody>
+				</table>
+			{% else %}
 			<p>You don't have any active bets. How about accepting some <a href="/bets/open_bets">open bets?</a></p>
+			{% endif %}
 		</div>
     </div>
 {% endblock %}
