--- a/cfbets/bets/templates/bets/base_all_bets.html
+++ b/cfbets/bets/templates/bets/base_all_bets.html
@@ -8,7 +8,7 @@
 			<h3>Active Bets</h3>
 			{% if all_active_bets %}
 				<p>Currently active bets across all users. These don't have a winner marked yet.</p>
-				<table class="table table-striped table-bordered">
+				<table class="table table-striped table-bordered table-condensed">
 					<thead>
 					  <tr>
 						<th>Proposer</th>
@@ -36,7 +36,7 @@
 			<h3>Past Accepted Bets</h3>
 			{% if all_accepted_bets %}
 				<p>All past accepted bets. These are accepted bets that have a winner marked (aka closed).</p>
-				<table class="table table-striped table-bordered">
+				<table class="table table-striped table-bordered table-condensed">
 					<thead>
 					  <tr>
 						<th>Proposer</th>
