--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -8,14 +8,15 @@
 		<div class="container">
 			<h3>Your Open Bets</h3>
 			{% if your_open_bets %}
-				<table class="table table-striped table-bordered">
+				<table class="table table-striped table-bordered table-condensed">
 					<thead>
 					  <tr>
 						<th>Prop Bet</th>
 						<th>Wager</th>
 						<th>Max Bets</th>
-						<th>Remaining Bets</th>
+						<th>Bets Remain</th>
 						<th>End Date</th>
+						<th>Remove</th>
 					  </tr>
 					</thead>
 					<tbody>
@@ -25,7 +26,12 @@
 							<td>${{ bet.prop_wager }}</td>
 							<td>{{ bet.max_wagers }}</td>
 							<td>{{ bet.remaining_wagers }}</td>
-							<td>{{ bet.end_date }}</td>
+							<td>{{ bet.end_date|date:"M d Y H:i" }}</td>
+							<td style="text-align: center; vertical-align: middle">
+								<a href="#" data-href="/bets/remove_prop_bet?id={{ bet.id }}" data-target="#removeBet" data-toggle="modal" data-id="{{ bet.prop_text }}" title="Remove prop bet" class="btn btn-danger btn-sm open-RemoveBet">
+									<span class="glyphicon glyphicon-remove"></span>
+								</a>
+							</td>
 						</tr>
 					{% endfor %}
 					</tbody>
@@ -62,5 +68,37 @@
 			{% endif %}
 		</div>
     </div>
+
+
+	<!-- Place Bets form modal -->
+	<div class="modal fade" id="removeBet" tabindex="-1" role="dialog" aria-labelledby="RemoveBet">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="RemoveBet">Remove Bet</h4>
+				</div>
+				<div class="modal-body">
+					<p>Remove your prop bet "<strong><span id="betId"></span></strong>"?</p>
+					<p><small>Note: Any active bets against this prop will remain active.</small></p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<a class="btn btn-danger">Remove Bet</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
 {% endblock %}
 
+{% block morejs %}
+	$('#removeBet').on('show.bs.modal', function (e) {
+		// get the bet text and place it in the modal
+		var betText = $(e.relatedTarget).attr('data-id');
+		$("#betId").html(betText);
+
+		// get the href link with bet id and place it in the href
+		$(this).find('.btn-danger').attr('href', $(e.relatedTarget).data('href'));
+	});
+{% endblock %}
