--- a/cfbets/bets/templates/bets/base_open_bets.html
+++ b/cfbets/bets/templates/bets/base_open_bets.html
@@ -7,14 +7,14 @@
 		<div class="container">
 			{% if open_bets %}
 				<p>These are all the open bets from other users. Accept these bets with reckless abandon.<p>
-				<table class="table table-striped table-bordered">
+				<table class="table table-striped table-bordered table-condensed">
 					<thead>
 					  <tr>
 						<th>User</th>
 						<th>Prop Bet</th>
 						<th>Wager</th>
 						<th>Max Bets</th>
-						<th>Remaining Bets</th>
+						<th>Bets Remain</th>
 						<th>End Date</th>
 					  </tr>
 					</thead>
@@ -26,7 +26,7 @@
 							<td>${{ bet.prop_wager }}</td>
 							<td>{{ bet.max_wagers }}</td>
 							<td>{{ bet.remaining_wagers }}</td>
-							<td>{{ bet.end_date }}</td>
+							<td>{{ bet.end_date|date:"M d Y H:i" }}</td>
 						</tr>
 					{% endfor %}
 					</tbody>
