--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -70,7 +70,7 @@
     </div>
 
 
-	<!-- Place Bets form modal -->
+	<!-- Remove bet modal -->
 	<div class="modal fade" id="removeBet" tabindex="-1" role="dialog" aria-labelledby="RemoveBet">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
