add ability to accept bets

--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -16,7 +16,6 @@
 						<th>Max Bets</th>
 						<th>Bets Remain</th>
 						<th>End Date</th>
-						<th>Remove</th>
 					  </tr>
 					</thead>
 					<tbody>
@@ -80,7 +79,7 @@
 				</div>
 				<div class="modal-body">
 					<p>Remove your prop bet "<strong><span id="betId"></span></strong>"?</p>
-					<p><small>Note: Any active bets against this prop will remain active.</small></p>
+					<p><small>Note: Any accepted bets against this prop will remain accepted.</small></p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
