--- a/cfbets/bets/templates/bets/base_all_bets.html
+++ b/cfbets/bets/templates/bets/base_all_bets.html
@@ -2,7 +2,8 @@
 
 {% block base_content %}
 
-    <div class="container">
+    <div class="c ntainen open_bets %}
+r">
         <h1>All Bets</h1>
 		<div class="container">
 			<h3>Active Bets</h3>
@@ -33,9 +34,9 @@
 			{% endif %}
 		</div>
 		<div class="container">
-			<h3>Past Accepted Bets</h3>
+			<h3>Completed Bets</h3>
 			{% if all_accepted_bets %}
-				<p>All past accepted bets. These are accepted bets that have a winner marked (aka closed).</p>
+				<p>All closed accepted bets. These are accepted bets that have a winner marked (aka closed).</p>
 				<table class="table table-striped table-bordered table-condensed">
 					<thead>
 					  <tr>
@@ -67,7 +68,7 @@
 					</tbody>
 				</table>
 			{% else %}
-			<p>No bets?! We must be just getting started.</p>
+			<p>No completed bets?! We must be just getting started.</p>
 			{% endif %}
 		</div>
     </div>
