--- a/cfbets/bets/templates/bets/base_open_bets.html
+++ b/cfbets/bets/templates/bets/base_open_bets.html
@@ -7,13 +7,12 @@
 		<div class="container">
 			{% if open_bets %}
 				<p>These are all the open bets from other users. Accept these bets with reckless abandon.<p>
-				<table class="table table-striped table-bordered table-condensed">
+				<table class="table table-striped table-bordered table-condensed table-responsive">
 					<thead>
 					  <tr>
-						<th>User</th>
 						<th>Prop Bet</th>
+						<th>User</th>
 						<th>Wager</th>
-						<th>Max Bets</th>
 						<th>Bets Remain</th>
 						<th>End Date</th>
 					  </tr>
@@ -21,10 +20,12 @@
 					<tbody>
 					{% for bet in open_bets %}
 						<tr>
+							<td>{{ bet.prop_text }}
+								<div class="acceptBetButton" style="padding:10px 10px 0px 0px"> 
+									<a href="#" data-href="/bets/accept_prop_bet?id={{ bet.id }}" data-target="#acceptBet" data-toggle="modal" data-id1="{{ bet.prop_text }}" data-id2="{{ bet.user.get_full_name }}" data-id3="{{ bet.prop_wager }}" title="Accept prop bet" class="btn btn-success btn-sm open-AcceptBet">Accept</a></td>
+								</div>
 							<td>{{ bet.user.get_full_name }}</td>
-							<td>{{ bet.prop_text }}</td>
 							<td>${{ bet.prop_wager }}</td>
-							<td>{{ bet.max_wagers }}</td>
 							<td>{{ bet.remaining_wagers }}</td>
 							<td>{{ bet.end_date|date:"M d Y H:i" }}</td>
 						</tr>
@@ -37,4 +38,41 @@
 		</div>
     </div>
 
+	<!-- Accept bet modal -->
+	<div class="modal fade" id="acceptBet" tabindex="-1" role="dialog" aria-labelledby="AcceptBet">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="AcceptBet">Accept Bet</h4>
+				</div>
+				<div class="modal-body">
+					<p>Accept <strong>$<span id="betAmount"></span></strong> bet
+					"<strong><span id="betId"></span>"</strong> 
+					proposed by <span id="betUser"></span>?</p>
+					<p><small>Note: This action can't be undone.</small></p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<a class="btn btn-success">Accept Bet</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+{% endblock %}
+
+{% block morejs %}
+	$('#acceptBet').on('show.bs.modal', function (e) {
+		// get the bet text and place it in the modal
+		var betText = $(e.relatedTarget).attr('data-id1');
+		var betUser = $(e.relatedTarget).attr('data-id2');
+		var betAmount = $(e.relatedTarget).attr('data-id3');
+		$("#betId").html(betText);
+		$("#betUser").html(betUser);
+		$("#betAmount").html(betAmount);
+
+		// get the href link with bet id and place it in the href
+		$(this).find('.btn-success').attr('href', $(e.relatedTarget).data('href'));
+	});
 {% endblock %}
