fix garbled html

--- a/cfbets/bets/templates/bets/base_all_bets.html
+++ b/cfbets/bets/templates/bets/base_all_bets.html
@@ -2,8 +2,7 @@
 
 {% block base_content %}
 
-    <div class="c ntainen open_bets %}
-r">
+    <div class="container">
         <h1>All Bets</h1>
 		<div class="container">
 			<h3>Active Bets</h3>
