--- a/cfbets/templates/base_profile.html
+++ b/cfbets/templates/base_profile.html
@@ -17,9 +17,30 @@
 		<div id="user-profile" class="tab-pane fade in active">
 			<br/>
 			<div "container">
-				<form class="form-horizontal" id="profile-form" method="post" action="">{% csrf_token %}
-					{{ user_form.as_p }}
-					{{ user_profile_form.as_p }}
+				<form class="form-horizontal" id="user-profile-form" method="post" action="">{% csrf_token %}
+						<fieldset>
+						{% for field in user_profile_form %}
+							{% if field.errors %}
+							<div class="control-group error">
+								<label class="control-label">{{ field.label }}</label> 
+								<div class="controls">{{ field }}
+								<p class="help-inline text-danger">
+									{% for error in  field.errors %}<strong>{{ error }}</strong>{% endfor %}
+								</p>
+								</div>
+							</div>
+							{% else %}
+							<div class="control-group" id="user-profile-group">
+								<label class="control-label">{{ field.label }}</label> 
+								<div class="controls">{{ field }}
+								{% if field.help_text %}
+									<p class="help-inline"><small>{{ field.help_text }}</small></p>
+								{% endif %}
+								</div>
+							</div>
+							{% endif %}
+						{% endfor %}
+						</fieldset>
 					<br/>
 					<div class="form-actions">
 						<button type="submit" class="btn btn-primary" >Save</button>
@@ -67,3 +88,20 @@
 </div>
 
 {% endblock %}
+
+{% block morejs %} 
+	$('form')
+		.each(function(){
+			$(this).data('serialized', $(this).serialize())
+		})
+		.on('change input', function(){
+			$(this)             
+				.find('input:submit, button:submit')
+					.prop('disabled', $(this).serialize() == $(this).data('serialized'))
+			;
+		 })
+		.find('input:submit, button:submit')
+			.prop('disabled', true)
+	;
+{% endblock %}
+
