--- a/cfbets/bets/templates/bets/base_admin_bets.html
+++ b/cfbets/bets/templates/bets/base_admin_bets.html
@@ -4,7 +4,111 @@
 
     <div class="container">
         <h1>Admin Bets</h1>
-	  <p> Hi, {{ user.get_full_name }}. You're logged in. </p>
+		<div class="container">
+			<h3>Expired Prop Bets Without Winner</h3>
+			<p>These prop bets have at least one accepted bet and are expired.</p>
+				{% if expired_prop_bets %}
+					<table class="table table-striped table-bordered table-condensed">
+						<thead>
+						  <tr>
+							<th>Proposer</th>
+							<th>Prop Bet</th>
+							<th>Wager</th>
+							<th>Max Bets</th>
+							<th>Bets Remain</th>
+							<th>End Date</th>
+						  </tr>
+						</thead>
+						<tbody>
+						{% for bet in expired_prop_bets %}
+							<tr>
+								<td>{{ bet.user.get_full_name }}</td>
+								<td>{{ bet.prop_text }}</td>
+								<td>${{ bet.prop_wager }}</td>
+								<td>{{ bet.max_wagers }}</td>
+								<td>{{ bet.remaining_wagers }}</td>
+								<td>{{ bet.end_date|date:"M d Y H:i" }}</td>
+							</tr>
+						{% endfor %}
+						</tbody>
+					</table>
+				{% else %}
+					<p>No bets to mark.</p>
+				{% endif %}
+
+			<br/>
+			<h3>All Open Prop Bets Without Winner</h3>
+			<p>These prop bets have at least one accepted bet but enddate has not passed.</p>
+				{% if open_prop_bets %}
+					<table class="table table-striped table-bordered table-condensed">
+						<thead>
+						  <tr>
+							<th>Proposer</th>
+							<th>Prop Bet</th>
+							<th>Wager</th>
+							<th>Max Bets</th>
+							<th>Bets Remain</th>
+							<th>End Date</th>
+						  </tr>
+						</thead>
+						<tbody>
+						{% for bet in open_prop_bets %}
+							<tr>
+								<td>{{ bet.user.get_full_name }}</td>
+								<td>{{ bet.prop_text }}</td>
+								<td>${{ bet.prop_wager }}</td>
+								<td>{{ bet.max_wagers }}</td>
+								<td>{{ bet.remaining_wagers }}</td>
+								<td>{{ bet.end_date|date:"M d Y H:i" }}</td>
+							</tr>
+						{% endfor %}
+						</tbody>
+					</table>
+				{% else %}
+					<p>No bets to mark.</p>
+				{% endif %}
+
+			<br/>
+			<h3>All Closed Prop bets</h3>
+			<p>These prop bets have a marked winner (and have at least one accepted bet).</p>
+				{% if closed_prop_bets %}
+					<table class="table table-striped table-bordered table-condensed">
+						<thead>
+						  <tr>
+							<th>Proposer</th>
+							<th>Prop Bet</th>
+							<th>Wager</th>
+							<th>Max Bets</th>
+							<th>Bets Remain</th>
+							<th>Win/Loss</th>
+						  </tr>
+						</thead>
+						<tbody>
+						{% for bet in closed_prop_bets %}
+							<tr>
+								<td>{{ bet.user.get_full_name }}</td>
+								<td>{{ bet.prop_text }}</td>
+								<td>${{ bet.prop_wager }}</td>
+								<td>{{ bet.max_wagers }}</td>
+								<td>{{ bet.remaining_wagers }}</td>
+							{% if bet.get_won_bet_display == "Win" %}
+								<td>Win</td>
+							{% elif bet.get_won_bet_display == "Loss" %}
+								<td>Loss</td>
+							{% elif bet.get_won_bet_display == "Tie" %}
+								<td>push</td>
+							{% else %}
+								<td></td>
+							{% endif %}
+							</tr>
+						{% endfor %}
+						</tbody>
+					</table>
+				{% else %}
+					<p>No bets to mark.</p>
+				{% endif %}
+
+
     </div>
 
 {% endblock %}
