update bets view to not show open bets with winner marked

--- a/cfbets/bets/templates/bets/base_admin_bets.html
+++ b/cfbets/bets/templates/bets/base_admin_bets.html
@@ -36,7 +36,7 @@
 				{% endif %}
 
 			<br/>
-			<h3>All Open Prop Bets Without Winner</h3>
+			<h3>Open Prop Bets Without Winner</h3>
 			<p>These prop bets have at least one accepted bet but enddate has not passed.</p>
 				{% if open_prop_bets %}
 					<table class="table table-striped table-bordered table-condensed">
