--- a/cfbets/bets/templates/bets/base_open_bets.html
+++ b/cfbets/bets/templates/bets/base_open_bets.html
@@ -54,7 +54,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<a class="btn btn-success">Accept Bet</a>
+					<a class="btn btn-success" onclick="this.disabled=true">Accept Bet</a>
 				</div>
 			</div>
 		</div>
