--- a/cfbets/bets/templates/bets/base_open_bets.html
+++ b/cfbets/bets/templates/bets/base_open_bets.html
@@ -22,7 +22,7 @@
 						<tr>
 							<td>{{ bet.prop_text }}
 								<div class="acceptBetButton" style="padding:10px 10px 0px 0px"> 
-									<a href="#" data-href="/bets/accept_prop_bet?id={{ bet.id }}" data-target="#acceptBet" data-toggle="modal" data-id1="{{ bet.prop_text }}" data-id2="{{ bet.user.get_full_name }}" data-id3="{{ bet.prop_wager }}" title="Accept prop bet" class="btn btn-success btn-sm open-AcceptBet">Accept</a></td>
+									<a href="#" data-href="/bets/accept_prop_bet?id={{ bet.id }}" data-target="#acceptBet" data-toggle="modal" data-id1="{{ bet.prop_text }}" data-id2="{{ bet.user.get_full_name }}" data-id3="{{ bet.prop_wager }}" data-id4="{{ bet.id }}" title="Accept prop bet" class="btn btn-success btn-sm open-AcceptBet">Accept</a></td>
 								</div>
 							<td>{{ bet.user.get_full_name }}</td>
 							<td>${{ bet.prop_wager }}</td>
@@ -47,6 +47,7 @@
 					<h4 class="modal-title" id="AcceptBet">Accept Bet</h4>
 				</div>
 				<div class="modal-body">
+					<span id="duplicateBet"></span>
 					<p>Accept <strong>$<span id="betAmount"></span></strong> bet
 					"<strong><span id="betId"></span>"</strong> 
 					proposed by <span id="betUser"></span>?</p>
@@ -64,6 +65,9 @@
 
 {% block morejs %}
 	$('#acceptBet').on('show.bs.modal', function (e) {
+		// remove any previous duplicate bet info
+		$("#duplicateBet").html('');
+		
 		// get the bet text and place it in the modal
 		var betText = $(e.relatedTarget).attr('data-id1');
 		var betUser = $(e.relatedTarget).attr('data-id2');
@@ -74,5 +78,23 @@
 
 		// get the href link with bet id and place it in the href
 		$(this).find('.btn-success').attr('href', $(e.relatedTarget).data('href'));
+
+		// check to see if you've already accepted this bet
+		var id = $(e.relatedTarget).attr('data-id4');
+		$.ajax({
+			url: '/bets/check_duplicate_bet/',
+			type: 'POST',
+			data: {id: id},
+			success: function(json){
+				console.log(json);
+				if (json.is_duplicate == "True")
+				{
+					$("#duplicateBet").html('<div class="alert alert-info"><span class="glyphicon glyphicon-info-sign"></span> You have accepted this bet at least once before. Are you that confident?</div>');
+				}
+			},
+			error: function(){
+				alert("issue with duplicate bet checking. id: " + id);
+			}
+		});
 	});
 {% endblock %}
