--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -33,7 +33,9 @@
 			<div class="container">
 
 				<div class="navbar-header navbar-left pull-left">
-					<a href="/" class="navbar-brand">cfbets</a>
+					<a href="/" class="navbar-brand">
+						<img alt="cfbets small logo" src="{% static 'assets/images/cfbets_logo_sm.png' %}">
+					</a>
 				</div>
 
 				<div class="navbar-header navbar-right pull-right">
@@ -143,7 +145,7 @@
 		{% block base_content %}
 			<div class="jumbotron">
 				<div class="container">
-					<img class="img-responsive" alt="cfbets logo" src="{% static 'assets/images/cfbets_logo.png' %}">
+					<img class="img-responsive" alt="cfbets main logo" src="{% static 'assets/images/cfbets_logo.png' %}">
 					<br/>
 					<p>Base content goes here. Change it.</p>
 			  	</div>
