make betting notes and buttons more clear

--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -79,10 +79,10 @@
 				</div>
 				<div class="modal-body">
 					<p>Remove your prop bet "<strong><span id="betId"></span></strong>"?</p>
-					<p><small>Note: Any accepted bets against this prop will remain accepted.</small></p>
+					<p><small><i>Note: Any accepted bets against this prop <strong>will remain</strong> accepted.</i></small></p>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 					<a class="btn btn-danger">Remove Bet</a>
 				</div>
 			</div>
