--- a/cfbets/bets/templates/bets/base_open_bets.html
+++ b/cfbets/bets/templates/bets/base_open_bets.html
@@ -51,10 +51,10 @@
 					<p>Accept <strong>$<span id="betAmount"></span></strong> bet
 					"<strong><span id="betId"></span>"</strong> 
 					proposed by <span id="betUser"></span>?</p>
-					<p><small>Note: This action can't be undone.</small></p>
+					<p><small><i>Note: You are betting <strong>against</strong> this prop bet. This action can't be undone.</i></small></p>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 					<a class="btn btn-success" onclick="this.disabled=true">Accept Bet</a>
 				</div>
 			</div>
