--- a/cfbets/static/assets/css/jumbotron.css
+++ b/cfbets/static/assets/css/jumbotron.css
@@ -67,7 +67,6 @@ form#place-bets-form input#id_bet_amount {
   padding: 0px;
 }
 .navbar-brand>img {
-  height: 100%;
-  padding: 15px;
+  padding: 5px 15px 5px 15px;
   width: auto;
 }
