--- a/cfbets/bets/templates/bets/base_admin_bets.html
+++ b/cfbets/bets/templates/bets/base_admin_bets.html
@@ -8,7 +8,7 @@
 			<h3>Expired Prop Bets Without Winner</h3>
 			<p>These prop bets have at least one accepted bet and are expired.</p>
 				{% if expired_prop_bets %}
-					<table class="table table-striped table-bordered table-condensed">
+					<table class="table table-striped table-bordered table-condensed" id="propExpired">
 						<thead>
 						  <tr>
 							<th>Proposer</th>
@@ -39,7 +39,7 @@
 			<h3>Open Prop Bets Without Winner</h3>
 			<p>These prop bets have at least one accepted bet but enddate has not passed.</p>
 				{% if open_prop_bets %}
-					<table class="table table-striped table-bordered table-condensed">
+					<table class="table table-striped table-bordered table-condensed" id="propNotExpired">
 						<thead>
 						  <tr>
 							<th>Proposer</th>
@@ -71,12 +71,13 @@
 			<h3>All Closed Prop bets</h3>
 			<p>These prop bets have a marked winner (and have at least one accepted bet).</p>
 				{% if closed_prop_bets %}
-					<table class="table table-striped table-bordered table-condensed">
+					<table class="table table-striped table-bordered table-condensed" id="propCompleted">
 						<thead>
 						  <tr>
 							<th>Proposer</th>
 							<th>Prop Bet</th>
 							<th>Win / Loss</th>
+							<th></th>
 						  </tr>
 						</thead>
 						<tbody>
@@ -139,4 +140,14 @@
 		// get the href link with bet id and place it in the href
 		$(this).find('.btn-warning').attr('href', $(e.relatedTarget).data('href'));
 	});
+
+    $('#propCompleted').dataTable( {
+        "order": [],
+		"columns": [
+			null,
+			null,
+			null,
+			{ "orderable": false, "searchable": false }
+		]
+    } );
 {% endblock %}
