--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -19,6 +19,10 @@
 		<link href="{% static 'assets/css/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
 		<!-- Custom styles for this template -->
 		<link href="{% static 'assets/css/jumbotron.css' %}" rel="stylesheet">
+		<!-- datatables css cdn -->
+		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/jq-2.2.4/dt-1.10.15/fh-3.1.2/r-2.1.1/datatables.min.css"/>
+
+
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
@@ -184,7 +188,10 @@
 		<!-- Bootstrap core JavaScript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<!-- datatables javascript cdn -->
+		<script type="text/javascript" src="https://cdn.datatables.net/v/bs/jq-2.2.4/dt-1.10.15/fh-3.1.2/r-2.1.1/datatables.min.js"></script>
+
 		<script>window.jQuery || document.write('<script src=" {% static 'assets/js/jquery.min.js' %}"><\/script>')</script>
 		<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
