--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -205,7 +205,8 @@
 
 				$('#place_bets').on('show.bs.modal', function () {
 					var d = new Date();
-					var curr_date = d.getDate() + 7;
+					d.setDate(d.getDate() + 7)
+					var curr_date = d.getDate();
 					var curr_month = d.getMonth() + 1;
 					var curr_year = d.getFullYear();
 					$('#id_bet_expiration_date').val(curr_month + "/" + curr_date + "/" + curr_year + " 12:00");
