--- a/cfbets/static/assets/css/jumbotron.css
+++ b/cfbets/static/assets/css/jumbotron.css
@@ -71,3 +71,17 @@ form#place-bets-form input#id_bet_amount {
   padding: 10px;
   width: auto;
 }
+
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900|Oswald);
+.status {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+.status .panel-title {
+    font-family: 'Oswald', sans-serif;
+    font-size: 35px;
+    font-weight: bold;
+    line-height: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    letter-spacing: -0.8px;
+}
