--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -122,7 +122,7 @@
 				<div class="collapse navbar-collapse">
 					{% if user.is_authenticated %}
 						<ul class="nav navbar-nav navbar-left">
-							<li class="{% if nbar == 'stats' %}active{% endif %}"><a href="/bets/stats">Stats</a></li>
+							<li class="{% if nbar == 'stats' %}active{% endif %}"><a href="/bets/your_stats">Stats</a></li>
 							<li class="{% if nbar == 'my_bets' %}active{% endif %}"><a href="/bets/my_bets">My Bets</a></li>
 							<li class="{% if nbar == 'open_bets' %}active{% endif %}"><a href="/bets/open_bets">Open Bets</a></li>
 							<li class="{% if nbar == 'all_bets' %}active{% endif %}"><a href="/bets/all_bets">All Bets</a></li>
