--- a/cfbets/bets/templates/bets/base_global_stats.html
+++ b/cfbets/bets/templates/bets/base_global_stats.html
@@ -3,7 +3,7 @@
 {% block base_content %}
 
 <div class="container">
-	<h3><a href="/bets/your_stats"><small>Your Stats</small></a> || Global Stats</h3>
+	<h3><a href="/bets/your_stats"><small><u>Your Stats</u></a><span class="glyphicon glyphicon-option-vertical"></span></small>Global Stats</h3>
 	<hr>
 	<div class="container">
 	 <div class="row">
@@ -11,7 +11,7 @@
 				
 				<div class="panel status panel-primary">
 					<div class="panel-heading">
-						<h1 class="panel-title text-center">$25,000</h1>
+						<h1 class="panel-title text-center">${{ global_stats.total_money }}</h1>
 					</div>
 					<div class="panel-body text-center">                        
 						<strong>total amount bet</strong>
@@ -23,7 +23,7 @@
 			  
 				<div class="panel status panel-default">
 					<div class="panel-heading">
-						<h1 class="panel-title text-center">$170</h1>
+						<h1 class="panel-title text-center">${{ global_stats.total_money_won }}</h1>
 					</div>
 					<div class="panel-body text-center">                        
 						<strong>total amount won</strong>
@@ -35,7 +35,7 @@
 			   
 				<div class="panel status panel-success">
 					<div class="panel-heading">
-						<h1 class="panel-title text-center">20,453</h1>
+						<h1 class="panel-title text-center">{{ global_stats.total_proposed }}</h1>
 					</div>
 					<div class="panel-body text-center">                        
 						<strong>total bets propsed</strong>
@@ -48,7 +48,7 @@
 			  
 				<div class="panel status panel-info">
 					<div class="panel-heading">
-						<h1 class="panel-title text-center">18,034</h1>
+						<h1 class="panel-title text-center">{{ global_stats.total_accepted }}</h1>
 					</div>
 					<div class="panel-body text-center">                        
 						<strong>total bets accepted</strong>
@@ -76,13 +76,36 @@
 						<h3>Total Betting Report</h3>
 					</div>
 					<div class="panel-body" id="totalBettingReport" style="width:100%;">
+						<table class="table table-striped table-bordered table-condensed" id="globalBettingReport">
+						<thead>
+						<tr>
+							<th>Name</th>
+							<th>Total Bets</th>
+							<th>Wins</th>
+							<th>Losses</th>
+							<th>Ties</th>
+							<th>Win %</th>
+						</tr>
+						</thead>
+
+						{% for entry in global_betting_report %}
+						<tr>
+							<th>{{ entry.name }}</th>
+							<th>{{ entry.total_bets }}</th>
+							<th>{{ entry.total_won }}</th>
+							<th>{{ entry.total_lost }}</th>
+							<th>{{ entry.total_tie }}</th>
+							<th>{{ entry.win_percentage }}</th>
+						</tr>
+						{% endfor %}
+						</table>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<h3>Bettingest Couple</h3>
+						<h3>Bettingest Couples</h3>
 					</div>
 					<div class="panel-body" id="bettingestCoupleReport" style="width:100%;">
 					</div>
@@ -96,6 +119,11 @@
 {% endblock %}
 
 {% block morejs %}
+
+	$('#globalBettingReport').dataTable( {
+			"order": [[0, 'asc']],
+			"pageLength": 25 
+	} );
 
 /////////////////////////////////
 // win loss by week chart
@@ -152,16 +180,16 @@ Highcharts.chart('totalBetsByWeek', {
 Highcharts.chart('yourBetsByWeek', {
 
     title: {
-        text: 'Solar Employment Growth by Sector, 2010-2016'
+        text: 'Total Bets by Week'
     },
 
     subtitle: {
-        text: 'Source: thesolarfoundation.com'
+        text: 'some more stuff here'
     },
 
     yAxis: {
         title: {
-            text: 'Number of Employees'
+            text: 'Number of Bets'
         }
     },
     legend: {
