--- a/cfbets/bets/templates/bets/base_all_bets.html
+++ b/cfbets/bets/templates/bets/base_all_bets.html
@@ -15,6 +15,7 @@
 						<th>Proposee</th>
 						<th>Prop Bet</th>
 						<th>Wager</th>
+						<th>Odds</th>
 					  </tr>
 					</thead>
 					<tbody>
@@ -24,6 +25,7 @@
 							<td>{{ bet.accepted_user.get_full_name }}</td>
 							<td>{{ bet.accepted_prop.prop_text }}</td>
 							<td>${{ bet.accepted_prop.prop_wager }}</td>
+							<td>${{ bet.accepted_prop.odds }}</td>
 						</tr>
 					{% endfor %}
 					</tbody>
@@ -43,6 +45,7 @@
 						<th>Proposee</th>
 						<th>Prop Bet</th>
 						<th>Wager</th>
+						<th>Odds</th>
 						<th>Winner</th>
 					  </tr>
 					</thead>
@@ -53,6 +56,7 @@
 							<td>{{ bet.accepted_user.get_full_name }}</td>
 							<td>{{ bet.accepted_prop.prop_text }}</td>
 							<td>${{ bet.accepted_prop.prop_wager }}</td>
+							<td>${{ bet.accepted_prop.odds }}</td>
 							{% if bet.accepted_prop.get_won_bet_display == "Win" %}
 								<td>{{ bet.accepted_prop.user.get_full_name }}</td>
 							{% elif bet.accepted_prop.get_won_bet_display == "Loss" %}
