--- a/cfbets/bets/templates/bets/base_your_stats.html
+++ b/cfbets/bets/templates/bets/base_your_stats.html
@@ -134,7 +134,7 @@
 
 		<div class="row">
 			<div class="col-md-12">
-				<div class="panel panel-default">
+				<div class="panel panel-default" style="min-width: 468px;">
 					<div class="panel-heading">
 						<h3>Bet Against Report</h3>
 					</div>
