move mobile toggle to left side

--- a/cfbets/templates/base.html
+++ b/cfbets/templates/base.html
@@ -37,9 +37,17 @@
 			<div class="container">
 
 				<div class="navbar-header navbar-left pull-left">
+					<button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="pull-left navbar-toggle" style="margin-left: 10px;">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+
 					<a href="/" class="navbar-brand">
 						<img alt="cfbets small logo" src="{% static 'assets/images/cfbets_logo_sm.png' %}">
 					</a>
+
 				</div>
 
 				<div class="navbar-header navbar-right pull-right">
@@ -106,13 +114,6 @@
 							</li>
 						{% endif %}
 					</ul>
-
-					<button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
 
 				</div>
 
