--- a/cfbets/bets/templates/bets/base_global_stats.html
+++ b/cfbets/bets/templates/bets/base_global_stats.html
@@ -107,7 +107,17 @@
 					<div class="panel-heading">
 						<h3>Bettingest Couples</h3>
 					</div>
-					<div class="panel-body" id="bettingestCoupleReport" style="width:100%;">
+					<div class="panel-body" id="bettingestCouples" style="width:100%;">
+						<table class="table table-striped table-bordered table-condensed" id="globalBettingestCouples">
+
+						{% for entry in global_bettingest_couples %}
+						<tr>
+							<th>{{ entry.users.0 }}</th>
+							<th>{{ entry.users.1 }}</th>
+							<th>{{ entry.num_bets }}</th>
+						</tr>
+						{% endfor %}
+						</table>
 					</div>
 				</div>
 			</div>
